--- a/linear regression e commerce dataset/linear_reg.ipynb
+++ b/linear regression e commerce dataset/linear_reg.ipynb
@@ -785,12 +785,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ac17e1af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test=train_test_split(x,y,test_size=0.3,random_state=42)"
+    "train_test_split(x,y,test_size=0.3,random_state=42)"
    ]
   },
   {
