--- a/heart_dataset/model.ipynb
+++ b/heart_dataset/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b358c4ca",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d6525340",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c3d657ee",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4              N      0.0       Up             0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6ff33502",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "68ea44e0",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "(918, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "508497c3",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "abda1710",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "max      6.200000      1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0af4fe37",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,11 +520,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "361b3e15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cholesterol\n",
+       "0      172\n",
+       "254     11\n",
+       "220     10\n",
+       "223     10\n",
+       "204      9\n",
+       "      ... \n",
+       "353      1\n",
+       "278      1\n",
+       "157      1\n",
+       "176      1\n",
+       "131      1\n",
+       "Name: count, Length: 222, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Cholesterol'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
