--- a/heart_dataset/model.ipynb
+++ b/heart_dataset/model.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "361b3e15",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "Name: count, Length: 222, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,19 +553,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "38f06ed6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ch_mean=df.loc[df['Cholesterol']!=0,'Cholesterol'].mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "129ef99c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(244.6353887399464)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ch_mean\n"
+   ]
   },
   {
    "cell_type": "code",
