--- a/heart_dataset/model.ipynb
+++ b/heart_dataset/model.ipynb
@@ -563,32 +563,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "129ef99c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(244.6353887399464)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ch_mean\n"
+    "ch_mean = df.loc[df['Cholesterol'] != 0,'Cholesterol'].mean()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "71f6f293",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Cholesterol'] = df['Cholesterol'].replace(0,ch_mean)\n",
+    "df['Cholesterol'] = df['Cholesterol'].round(2)"
+   ]
   },
   {
    "cell_type": "code",
