--- a/heart_dataset/model.ipynb
+++ b/heart_dataset/model.ipynb
@@ -585,11 +585,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f9664033",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "resting_bp_mean = df.loc[df['RestingBP'] != 0, 'RestingBP'].mean()\n",
+    "\n",
+    "df['RestingBP'] = df['RestingBP'].replace(0, resting_bp_mean)\n",
+    "\n",
+    "df['RestingBP'] = df['RestingBP'].round(2)"
+   ]
   }
  ],
  "metadata": {
