data preprocessing and cleaning

--- a/heart_dataset/model.ipynb
+++ b/heart_dataset/model.ipynb
@@ -812,6 +812,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2c8ddc2",
+   "metadata": {},
+   "source": [
+    "#### data processing and data cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e2d0ab06",
